--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
 
 # dependencies
 /node_modules
@@ -10,6 +10,9 @@
 
 # production
 /build
+.firebaserc
+firebase.json
+/.firebase
 
 # misc
 .DS_Store
